kube-deploys/hello-universe-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: hello-universe
  name: hello-universe
spec:
  replicas: 3
  template:
    spec:
      containers:
      - livenessProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: pythonport
          periodSeconds: 5
        name: hello-universe
        imagePullPolicy: IfNotPresent
        #readinessProbe:
        #  httpGet:
        #    path: "/"
        #    port: pythonport
        #  timeoutSeconds: 10
        #  periodSeconds: 5
        #  successThreshold: 1
        #  initialDelaySeconds: 5
        #  failureThreshold: 2
        image: demo/hello-universe:v1
        ports:
        - protocol: TCP
          name: pythonport
          containerPort: 5000
      nodeSelector:
        environment: test
    metadata:
      labels:
        name: hello-universe
  selector:
    matchLabels:
      name: hello-universe
