kube-deploys/hello-universe-gateway-traffic-shifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: common-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - common-gateway
  http:
  - route:
    - destination:
        host: hello-universe.hello-universe.svc.cluster.local
        subset: v2
      weight: 99
    - destination:
        host: hello-universe.hello-universe.svc.cluster.local
        subset: v1
      weight: 1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: new-universe-destination
spec:
  host: hello-universe.hello-universe.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
