kube-deploys/hello-universe-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: common-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - common-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-universe.hello-universe.svc.cluster.local
